2005-08-30  Andrew Johnson  <ajgenius@ajgenius.us>

	* engines/mist/src/mist-style.c:begin conversion to cairo for 2.8
	
2005-08-30  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_rounded_rectectangle): Decided to opt for easier math. Should
	avoid some unnecessary headaches.
	* engines/clearlooks/src/clearlooks_draw.c: (clearlooks_draw_button),
	(clearlooks_draw_menuitem), (clearlooks_draw_scrollbar_stepper),
	(clearlooks_draw_scrollbar_slider): Added functions to draw scrollbar. 
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_style.c: (draw_handle),
	(draw_box):
	* engines/clearlooks/src/clearlooks_types.h:
	* engines/clearlooks/src/support.c: (scrollbar_get_stepper),
	(scrollbar_visible_steppers), (scrollbar_get_junction): Added support
	functions to determine which stepper is drawn, as well as which sides of
	the slider jonjoin.
	* engines/clearlooks/src/support.h:

2005-08-28  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_rounded_rectectangle), (clearlooks_draw_button),
	(clearlooks_scale_draw_gradient), (clearlooks_draw_slider_button),
	(clearlooks_draw_progressbar_trough), (clearlooks_draw_frame),
	(clearlooks_draw_menuitem):
	* engines/clearlooks/src/clearlooks_style.c: (draw_box_gap),
	(draw_hline):

	Minor speed improvements.

2005-08-27  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_entry): Draw an opaque border, instead of
	a transparent one. What was I thinking?
	* engines/clearlooks/src/clearlooks_style.c: (draw_shadow):
	Sanitize the size, if needed.

2005-08-26  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button), (clearlooks_get_frame_gap_clip),
	(clearlooks_draw_frame), (clearlooks_draw_list_view_header),
	(clearlooks_draw_toolbar), (clearlooks_draw_menuitem):